FIX calcolo fascia di attribuzione